# uAgents-examples-old

./: README.md
holiday-integrations/: README.md
holiday-integrations/src/agents/activities/: top_activities.py
mobility-integrations/: README.md
mobility-integrations/src/: main.py
starter/: README.md  pyproject.toml
starter/uagent_starter/: main.py
starter/uagent_starter/agents/: alice.py  bob.py
starter/uagent_starter/messages/: basic.py
